added new featue'

--- a/views/project.hbs
+++ b/views/project.hbs
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>Projects</title>
     </head>
     <body>
         {{> header}}
-        <p>Welcome to my website.</p>
+        <p><a href="#">Link to my portfolio.</a></p>
     </body>
 </html>
