--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,6 @@
-<h2>{{pageTitle}}</h2>
+<header>
+    <h2>{{pageTitle}}</h2>
+    <p><a href="/">Home</a></p>
+    <p><a href="/about">About</a></p>
+    <p><a href="/projects">Projects</a></p>
+</header>
